# api/swagger.yaml
@@ -60,7 +60,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GetDocResponse'
+                $ref: '#/components/schemas/UserResponse'
         default:
           description: Default error response
           content:
@@ -117,7 +117,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UpdateDocResponse'
+                $ref: '#/components/schemas/UserResponse'
         default:
           description: Default error response
           content:
@@ -138,6 +138,10 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Request'
+    BatchUpdateDocDataRsp:
+      type: object
+      properties: {}
+      example: {}
     GetDocFullTextRsp:
       type: object
       properties:
@@ -154,30 +158,6 @@ components:
           text: text
           type: type
           begin: 6
-    GetDocResponse:
-      type: object
-      properties:
-        ret:
-          type: integer
-          format: int32
-        msg:
-          type: string
-        data:
-          $ref: '#/components/schemas/GetDocFullTextRsp'
-      example:
-        ret: 0
-        msg: msg
-        data:
-          document:
-            children:
-            - null
-            - null
-            property:
-              key: ""
-            end: 1
-            text: text
-            type: type
-            begin: 6
     GoogleProtobufAny:
       type: object
       properties:
@@ -325,6 +305,26 @@ components:
           $ref: '#/components/schemas/InsertImageRequest'
         insertWebBlock:
           $ref: '#/components/schemas/InsertWebBlockRequest'
+    Response:
+      type: object
+      properties:
+        getDocFullTextRsp:
+          $ref: '#/components/schemas/GetDocFullTextRsp'
+        batchUpdateDocDataRsp:
+          $ref: '#/components/schemas/BatchUpdateDocDataRsp'
+      example:
+        batchUpdateDocDataRsp: {}
+        getDocFullTextRsp:
+          document:
+            children:
+            - null
+            - null
+            property:
+              key: ""
+            end: 1
+            text: text
+            type: type
+            begin: 6
     Status:
       type: object
       properties:
@@ -349,7 +349,7 @@ components:
         \ three pieces of data: error code, error message, and error details. You\
         \ can find out more about this error model and how to work with it in the\
         \ [API Design Guide](https://cloud.google.com/apis/design/errors)."
-    UpdateDocResponse:
+    UserResponse:
       type: object
       properties:
         ret:
@@ -357,6 +357,21 @@ components:
           format: int32
         msg:
           type: string
+        data:
+          $ref: '#/components/schemas/Response'
       example:
         ret: 0
         msg: msg
+        data:
+          batchUpdateDocDataRsp: {}
+          getDocFullTextRsp:
+            document:
+              children:
+              - null
+              - null
+              property:
+                key: ""
+              end: 1
+              text: text
+              type: type
+              begin: 6
